* Added ar-transation.csv and ap-transaction.csvn templates (Erik H)
* Fixed blank screen processing recurring transactiosn in fcgi (Chris T)
* Removed blank/unused Contact/Employee dropdown on shipping screen (Chris T)
* Fixed internal server errors retrieving taxes with invalid dates (Chris T)
* Fixed taxform "default reportable" checkbox not persisted (Chris T, 3581310)

Chris T is Chris Travers
Kevin B is Kevin Bailey

Changelog for 1.3.24
* Fixed error in msgid for "Add Language" (Havard S, h/t Robert C)
* Moved Makefile.PL to version_from to reduce errors (Chris T, h/t Robert C)
* Prompts added to configure_apache.sh (Berend T)
* Corrected image not showable on html invoice (Chris T)
* Fixed invoice date not printing on checks (Chris T, h/t Neil S)
* Changed INSTALL to do make test, not of make install (Chris T h/t Kevin B)
* Fixed framework for printing parts tumbnails in invoices (Chris T)
* Upgrade now handles nulls in model field of makemodel (Chris T)
* Fixed issue with comment in account.sql (Chris T)
* Removed unused Subcontractor GIFI field (Chris T, h/t Erik H)
* Changed upgrade screen to pull AR/AP numbers (Erik H)
* Rebuild modules after upgrade, ensuring upgrade to latest version (Chris T)
* Fixed credit limit usage calculations (Chris T, h/t Erik H)
* Fixes to get LedgerSMB running clearly using FCGI (Chris T)
* Fixed unapproved transactions showing up on aging reports (Chris T)
* Fixed new window menu item not showing up (Erik H)
* Fixed alignment issue on Contact screen on Chrome (Chris T)
* Fixed cannot reconcile account with negative balance(Havard S, Erik H, h/t Nick P,3586757)
* Documented cache_templates option in ledgersmb.conf (Chris T)
* Fixed internal server error on plack with backups (Chris T)
* Added add user button to setup.pl when LedgerSMB 1.3 db detected (Chris T)
* Backup buttons do not show when no db found (Chris T)

Berend T is Berend Tober
Chris T is Chris Travers
Erik H is Erik Huelsmann
Havard S is Havard Sorli