@@ -15,6 +15,7 @@ Changelog for 1.3.25
 * Removed blank/unused Contact/Employee dropdown on shipping screen (Chris T)
 * Fixed internal server errors retrieving taxes with invalid dates (Chris T)
 * Fixed taxform "default reportable" checkbox not persisted (Chris T, 3581310)
+* Fixed labelling of vendor column on taxform reports (Chris T, 3581317)
 
 Chris T is Chris Travers
 Kevin B is Kevin Bailey
